# dsd-fastapi-example

./: .gitignore  README.md  formatting.sh  pyproject.toml
src/: main.py
src/api/: deps.py  router.py
src/api/api_v1/: example.py  users.py
src/core/: config.py  utils.py
src/core/db/: base.py  crud.py  models.py
src/schemas/: users.py
src/scripts/: init_db.sh
src/scripts/sql/: create_tables.sql  insert_users_data.sql
