[tool.poetry]
name = "dsd-fastapi-example"
version = "0.1.0"
description = ""
authors = ["Eunwoo Cho <ewcho@dotslashdash.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
SQLAlchemy = "^1.4.44"
PyMySQL = "^1.0.2"
cryptography = "^38.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
